# detect-teppe-doc

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: doc.yaml
dev-guide/architecture/: index.html
dev-guide/code_of_conduct/: index.html
dev-guide/contributing/: index.html
docs/: index.md  project-overview.md
docs/dev-guide/: code_of_conduct.md
docs/getting-started/: data-access.md  datasets.md  first-look.md
faq/: index.html
getting-started/data-access/: index.html
getting-started/datasets/: index.html
getting-started/first-look/: index.html
getting-started/quick-start/: index.html
project-overview/: index.html
search/: search_index.json
user-guide/basic-usage/: index.html
