[project]
name = "detect-teppe-doc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Laura Dumont", email = "laura.dt.dumont@gmail.com" }
]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.38",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/detect_teppe_doc"]

[tool.uv]
# uv-specific configurations can be added here if needed in the future
